add : swagger docs for uploading Donation Imgae
