# storage/api-docs/api-docs.yaml
@@ -28,6 +28,29 @@ paths:
               schema:
                 $ref: "#/components/schemas/DonationResponse"
 
+  /api/images/upload-donation-image:
+    post:
+      operationId: uploadDonationImage
+      summary: Upload Donation Image
+      tags:
+        - Image
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  type: string
+                  format: binary
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Image'
+
 components:
   schemas:
     DonationRequest:
@@ -271,3 +294,24 @@ components:
         url:
           type: string
           example: "https://checkout.stripe.com/c/pay/cs_test_a171mEerBChNgEVRshVkcGSK7pn8l4PeCcobnFPsvo40nRy3rMgz2hFodq"
+    Image:
+      type: object
+      required:
+        - image_id
+        - image_name
+        - image_status
+        - image_url
+      properties:
+        image_id:
+          type: string
+          example : 1yU3dbWNL2Hr-FSOATrFCbJBGakGagFPd
+        image_name:
+          type: string
+          example: 20241031-VW26J3
+        image_status:
+          type: string
+          example: uploaded
+        image_url:
+          type: string
+          example: https://drive.google.com/file/d/1yU3dbWNL2Hr-FSOATrFCbJBGakGagFPd/view
+
